created api for actors and starting movie api

--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,12 @@ PORT=8000
 MOGODB_URL = mongodb://127.0.0.1:27017/movie-review-app
 
 JWT_SECRET = "shubham"
+
+CLOUD_NAME = 'dhdikvy2r'
+CLOUD_API_KEY = '346981221457433'
+CLOUD_API_SECRET = 'mA0_qLiNkArCuGF-bQHhWrkp4Wk'
+CLOUD_FOLDER_NAME = "movie-review-app"
+
+MAIL_TRAP_USER = "e0e6766fed9f1c"
+MAIL_TRAP_PASS =  "6629806f3ead70"
+
