uploading trailer component created with functionality

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,8 @@
 PORT=8000
 
-MOGODB_URL = mongodb://127.0.0.1:27017/movie-review-app
+MOGODB_URL = mongodb+srv://shubhamkumarprajapati544:lBX0LfYgyMtAaUIF@cluster0.nkmsbpb.mongodb.net/movie-review-app?retryWrites=true&w=majority
+
+
 
 JWT_SECRET = "shubham"
 
